added docking page

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,19 +6,18 @@
     <section>
         <div class="title">
             <h1>Molecular Docking Viewer</h1>
-            <h3>Dengue Drug Discovery: AI-Driven Design and In Silico Evaluation of Peptide Inhibitors For Dengue Virus 3 Envelope Protein</h3>
+            <h3>AI-Driven Design and In Silico Evaluation of Peptide Inhibitors For Dengue Virus 3 Envelope Protein</h3>
             <p>This web application focuses on visualizing molecular docking results for protein–peptide interactions in a clear, interactive interface to support antiviral drug research.</p>
         </div>
     </section>
 
-    <section>
+    <section id="objectives">
         <div>
             <h1 class="main-heading">Project Objectives</h1>
         </div>
 
         <div class="objectives">
             <div>
-
                 <p>Constructing antiviral peptide sequences that effectively inhibit and bind with the DENV E protein, utilizing deep learning models</p>
             </div>
             <div>
@@ -30,13 +29,13 @@
         </div>
     </section>
 
-    <section>
+    <section id="methodology">
         <div>
             <h1 class="main-heading">Methodology</h1>
         </div>
     </section>
 
-    <section>
+    <section id="behind">
         <div>
             <h1 class="main-heading">Behind the Words</h1>
         </div>
