--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -29,33 +29,54 @@ header {
     width: 100%;
     z-index: 1000;
     backdrop-filter: blur(5px);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
+}
+ 
+.site-title {
+    font-size: 1.3em !important;
+    font-weight: 900;
+    font-style: italic;
 }
 
 .navbar {
-    background-color: var(--accent-color);
+    /* background-color: var(--accent-color); */
+    display: flex;
+    justify-content: space-between;
     overflow: hidden;
+    padding: 0 3em;
+}
+
+.navbar > div {
+    display: flex;
+    align-items: center;
 }
 
 .navbar ul {
     list-style: none;
     padding: 1em;
-    margin-right: 3em;
     display: flex;
-    justify-content: flex-end;
     gap: 2em;
     align-items: center;
 }
 
 .navbar a {
-    color: white;
+    color: var(--accent-color);
     text-decoration: none;
     font-size: 1.2rem;
 }
 
-.navbar a:hover {
-    color: var(--secondary-color)
+.nav-links a {
+    color: var(--primary-color) !important;
+    font-weight: 600;
 }
 
+.navbar a:hover {
+    color: var(--secondary-color) !important;
+}
+
+.nav-sections.hidden {
+    display: none;
+}
 
 section {
     padding: 5em 4em 0em 4em;
@@ -64,7 +85,7 @@ section {
 
 
 
-
+/* LANDING PAGE STYLES */
 .title {
     width: 45%;
     height: 60%;
@@ -116,8 +137,63 @@ section {
 
 
 
+/* MOLECULAR DOCKING PAGE STYLES */
+
+.molecular-docking {
+    display: grid;
+    grid-template-columns: 30% auto;
+    grid-gap: 2em;
+}
+
+.docking-content p {
+    padding: 1em 1.5em;
+}
+
+.docking-content > div {
+    padding-bottom: 3em;
+}
+
+.dropdown-container {
+    display: flex;
+    gap: 1.2em;
+}
+
+label {
+    font-weight: bold;
+}
+
+select {
+    margin-top: 0.8em;
+    padding: 0.8em;
+    border: none;
+    border-radius: 10px;
+    font-family: 'Outfit', sans-serif;
+    font-size: 1em;
+}
+
+.iframe-container iframe {
+    width: 100%;
+    height: 80vh;
+    border: 2px solid #ccc;
+    border-radius: 8px;
+    background-color: white;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+iframe {
+    width: 90%;
+    height: 80vh;
+    border: 2px solid #ccc;
+    border-radius: 8px;
+    background-color: white;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
 
 
+
+
+
+/* FOOTER STYLES */
 
 .footer {
     background-color: var(--primary-color);
@@ -149,8 +225,6 @@ section {
     color: white;
     font-size: 1.2em;
 }
-
-
 
 .footer-links {
     list-style: none;
