--- a/app/templates/includes/navigation.html
+++ b/app/templates/includes/navigation.html
@@ -1,7 +1,13 @@
 <header>
     <nav class="navbar">
         <ul>
-            <li><a href="/">About</a></li>
+            <li><a href="/" class="site-title">Dengue Drug Discovery</a></li>
+            <li><a href="#objectives" class="nav-sections">Objectives</a></li>
+            <li><a href="#methodology" class="nav-sections">Methodology</a></li>
+            <li><a href="#behind" class="nav-sections">Behinds</a></li>
+        </ul>
+        
+        <ul class="nav-links">
             <li><a href="/docking">Docking</a></li>
             <li><a href="/peptides">Peptides</a></li>
         </ul>
