added landig page contents

--- a/app/templates/includes/footer.html
+++ b/app/templates/includes/footer.html
@@ -3,17 +3,18 @@
         <div class="footer-left">
             <div class="footer-text">
                 <h4>Molecular Docking Viewer</h4>
-                <p>&copy; 2025 Vcarmeli</p>
+                <p>Made by Vcarmelli</p>
             </div>
-            <div class="footer-text">
-                <p>Logo </p>
-                <h4>Kinase AI</h4>
+            <div>
+                <a href="https://www.kinase-ai.com/">
+                    <img class="footer-logo" src="{{ url_for('static', filename='img/kinase-ai.png') }}" alt="Kinase AI" target="_blank">
+                </a>
             </div>
         </div>
         <ul class="footer-links">
-            <li><a href="/privacy">Facebook</a></li>
-            <li><a href="/terms">Github</a></li>
-            <li><a href="/contact">LinkedIn</a></li>
+            <li><a href="https://www.facebook.com/vashti.karmelli16" target="_blank">Facebook</a></li>
+            <li><a href="https://www.linkedin.com/in/vashti-karmelli-c/" target="_blank">LinkedIn</a></li>
+            <li><a href="https://github.com/Vcarmelli" target="_blank">Github</a></li>
         </ul>
     </div>
 </footer>
