--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,7 +8,7 @@
     <section id="title-section">
         <div class="title">
             <h1>Molecular Docking Viewer</h1>
-            <h3>AI-Driven Design and In Silico Evaluation of Peptide Inhibitors For Dengue Virus 3 Envelope Protein</h3>
+            <h3>AI-Driven Design and In Silico Evaluation of Peptide Inhibitors For Dengue Virus Envelope Protein</h3>
             <p>This web application focuses on visualizing molecular docking results for protein–peptide interactions in a clear, interactive interface to support antiviral drug research.</p>
         </div>
     </section>
@@ -19,15 +19,15 @@
         </div>
 
         <div class="objectives">
-            <div>
+            <div class="objective-card">
                 <div class="objective-icon">🎯</div>
                 <p>Constructing antiviral peptide sequences that effectively inhibit and bind with the DENV E protein, utilizing deep learning models</p>
             </div>
-            <div>
+            <div class="objective-card">
                 <div class="objective-icon">🔬</div>
                 <p>Validating the predicted peptides using molecular docking to confirm their binding efficiency and stability within the target environment</p>
             </div>
-            <div>
+            <div class="objective-card">
                 <div class="objective-icon">💡</div>
                 <p>Providing insights for further research development in the field of antiviral peptide discovery</p>
             </div>
