convert admet ui into tabs

--- a/app/templates/docking.html
+++ b/app/templates/docking.html
@@ -4,6 +4,8 @@
 
 {% block content %}
 <section class="molecular-docking">
+    <div class="floating-elements" id="floatingElements"></div>
+
     <div class="docking-content">
         <div>
             <h1 class="main-heading">How Was Molecular Docking Done?</h1>
@@ -37,7 +39,7 @@
                     <option value="" hidden>Select PDB</option>
                 </select>
             </div>
-            <button id="peptide-btn">View Peptide Properties add the inhibition score ng docking na ito</button>
+            <button id="peptide-btn">View Peptide Properties</button>
         </div>
     </div>
     <div>
