--- a/app/templates/includes/footer.html
+++ b/app/templates/includes/footer.html
@@ -6,8 +6,8 @@
                 <p>Made by Vcarmelli</p>
             </div>
             <div>
-                <a href="https://www.kinase-ai.com/">
-                    <img class="footer-logo" src="{{ url_for('static', filename='img/kinase-ai.png') }}" alt="Kinase AI" target="_blank">
+                <a href="https://www.kinase-ai.com/" target="_blank">
+                    <img class="footer-logo" src="{{ url_for('static', filename='img/kinase-ai.png') }}" alt="Kinase AI" >
                 </a>
             </div>
         </div>
