--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,6 +11,9 @@
             <h3>AI-Driven Design and In Silico Evaluation of Peptide Inhibitors For Dengue Virus Envelope Protein</h3>
             <p>This web application focuses on visualizing molecular docking results for protein–peptide interactions in a clear, interactive interface to support antiviral drug research.</p>
         </div>
+        <div class="title-gif">
+            <img src="../static/img/landing.gif" alt="Protein-Peptide">
+        </div>
     </section>
 
     <section id="objectives">
